# amortization

./: .dockerignore  DUDAS.md  Dockerfile  README.md  ROADMAP.md  api_amortization.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: keep-warm.yml
api/: index.py
src/: ahorro.py  amortization.py  comparador.py  decisiones.py  inmueble.py
static/: amortization.js  styles.css
templates/: amortization.html
